# B_Chan_Algorithmic-Trading

./: README.md  pyproject.toml
data/: sample_basket_prices.csv  sample_prices.csv
doc/: doc0.docx
src/chan_trading/: __init__.py  config.py  types.py
src/chan_trading/backtest/: broker.py  engine.py  event_engine.py
src/chan_trading/data/: loaders.py
src/chan_trading/execution/: __init__.py  impact.py  rebalance.py
src/chan_trading/features/: __init__.py  cointegration.py  futures.py  statistics.py
src/chan_trading/portfolio/: __init__.py  ensemble.py  kelly.py  sizing.py
src/chan_trading/risk/: __init__.py  combinatorial_cv.py  metrics.py  monte_carlo.py  regime.py
src/chan_trading/strategies/: __init__.py  base.py  basket_mean_reversion.py  cross_sectional_mean_reversion.py  cross_sectional_momentum.py  mean_reversion.py  momentum.py  opening_gap.py
src/chan_trading/validation/: __init__.py  permutation.py  sensitivity.py  walkforward.py  walkforward_basket.py  walkforward_event.py
tests/: conftest.py  test_v10_upgrades.py  test_v11_upgrades.py  test_v12_upgrades.py  test_v13_upgrades.py  test_v14_upgrades.py  test_v9_smoke.py
